# SPAM_FILTER

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  Sanitizers.cmake  ga.cpp  ga.hpp  main.cpp  main.hpp
sms/: spam_small.txt  spam_training.txt
